Fixes container inside ui menu on mobile #2969

--- a/src/definitions/collections/menu.less
+++ b/src/definitions/collections/menu.less
@@ -377,7 +377,7 @@
 
 @media only screen and (max-width: @largestMobileScreen) {
   .ui.menu > .ui.container {
-    width: 100%;
+    width: 100% !important;
     margin-left: 0em !important;
     margin-right: 0em !important;
   }
